# PyTorch-Lightning-NLP-lab

./: LICENSE  README.md  pyproject.toml  test.py  train.py
configs/: config.yaml
configs/data/: CDL.yaml  encoder.yaml
configs/hydra/sweeper/: optuna_config.yaml
configs/logger/: mlflow.yaml
configs/model/: bert.yaml  bert_bilstm.yaml  bert_cnn.yaml  bilstm.yaml  cnn.yaml
configs/optimizer/: adamw.yaml
configs/sampler/: stratified.yaml
configs/scheduler/: linear_warmup.yaml  none.yaml
configs/sweeper_params/: bert_bilstm.yaml  bilstm.yaml  cnn.yaml
configs/task/: binary.yaml  regression.yaml
configs/trainer/: default.yaml
src/data/: datamodule.py  dataset_classes.py
src/models/: BiLSTM.py  CNN.py  cls_head.py  composer.py  embeddings.py
src/tasks/: base_task.py  standard_task.py
src/utils/: prepare_data.py  samplers.py  set_vars.py
